--- a/Reports/quantity_stock_rpt_xls.jrxml
+++ b/Reports/quantity_stock_rpt_xls.jrxml
@@ -81,7 +81,7 @@
 				<text><![CDATA[No.]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-7" x="120" y="7" width="83" height="15"/>
+				<reportElement key="staticText-7" x="120" y="7" width="93" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -92,7 +92,7 @@
 				<text><![CDATA[Kd. Barang]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-8" x="203" y="7" width="224" height="15"/>
+				<reportElement key="staticText-8" x="213" y="7" width="214" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -139,8 +139,8 @@
 	</columnHeader>
 	<detail>
 		<band height="18" splitType="Stretch">
-			<textField isStretchWithOverflow="true" isBlankWhenNull="false">
-				<reportElement key="textField" x="203" y="0" width="224" height="18"/>
+			<textField isBlankWhenNull="false">
+				<reportElement key="textField" x="213" y="0" width="214" height="18"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -152,8 +152,8 @@
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{itemName}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="false">
-				<reportElement key="textField" x="120" y="0" width="83" height="18"/>
+			<textField isBlankWhenNull="false">
+				<reportElement key="textField" x="120" y="0" width="93" height="18"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -165,7 +165,7 @@
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA["P:"+$F{itemCode}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" pattern="#,##0.0" isBlankWhenNull="false">
+			<textField pattern="#,##0.0" isBlankWhenNull="false">
 				<reportElement key="textField" x="483" y="0" width="69" height="18"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -178,7 +178,7 @@
 				</textElement>
 				<textFieldExpression class="java.lang.Double"><![CDATA[$F{price}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" pattern="###0" isBlankWhenNull="true">
+			<textField pattern="###0" isBlankWhenNull="true">
 				<reportElement key="textField" x="30" y="0" width="90" height="18"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -191,7 +191,7 @@
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{branddesc}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" isBlankWhenNull="false">
+			<textField isBlankWhenNull="false">
 				<reportElement key="textField" x="0" y="0" width="30" height="18"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -204,7 +204,7 @@
 				</textElement>
 				<textFieldExpression class="java.lang.Integer"><![CDATA[$V{no}]]></textFieldExpression>
 			</textField>
-			<textField isStretchWithOverflow="true" pattern="&quot;&quot;" isBlankWhenNull="false">
+			<textField pattern="&quot;&quot;" isBlankWhenNull="false">
 				<reportElement key="textField" x="427" y="0" width="56" height="18"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
