--- a/Reports/quantity_stock_rpt_xls.jrxml
+++ b/Reports/quantity_stock_rpt_xls.jrxml
@@ -92,7 +92,7 @@
 				<text><![CDATA[Kd. Barang]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-8" x="213" y="7" width="214" height="15"/>
+				<reportElement key="staticText-8" x="213" y="7" width="204" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -114,7 +114,7 @@
 				<text><![CDATA[Brand]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-10" x="483" y="7" width="69" height="15"/>
+				<reportElement key="staticText-10" x="502" y="7" width="50" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -125,7 +125,7 @@
 				<text><![CDATA[Stock]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-10" x="427" y="7" width="56" height="15"/>
+				<reportElement key="staticText-10" x="417" y="7" width="85" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -140,7 +140,7 @@
 	<detail>
 		<band height="18" splitType="Stretch">
 			<textField isBlankWhenNull="false">
-				<reportElement key="textField" x="213" y="0" width="214" height="18"/>
+				<reportElement key="textField" x="213" y="0" width="204" height="18"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -166,7 +166,7 @@
 				<textFieldExpression class="java.lang.String"><![CDATA["P:"+$F{itemCode}]]></textFieldExpression>
 			</textField>
 			<textField pattern="#,##0.0" isBlankWhenNull="false">
-				<reportElement key="textField" x="483" y="0" width="69" height="18"/>
+				<reportElement key="textField" x="502" y="0" width="50" height="18"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -204,15 +204,15 @@
 				</textElement>
 				<textFieldExpression class="java.lang.Integer"><![CDATA[$V{no}]]></textFieldExpression>
 			</textField>
-			<textField pattern="&quot;&quot;" isBlankWhenNull="false">
-				<reportElement key="textField" x="427" y="0" width="56" height="18"/>
+			<textField pattern="" isBlankWhenNull="false">
+				<reportElement key="textField" x="417" y="0" width="85" height="18"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
-				<textElement verticalAlignment="Middle">
+				<textElement textAlignment="Left" verticalAlignment="Middle">
 					<font size="8"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$F{pricename}]]></textFieldExpression>
