--- a/Reports/quantity_stock_rpt_xls.jrxml
+++ b/Reports/quantity_stock_rpt_xls.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="FINV-01" pageWidth="612" pageHeight="792" columnWidth="552" leftMargin="30" rightMargin="30" topMargin="20" bottomMargin="20" isIgnorePagination="true">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="FINV-01" pageWidth="612" pageHeight="792" columnWidth="552" leftMargin="30" rightMargin="30" topMargin="20" bottomMargin="20" isIgnorePagination="true" uuid="502f7aef-d6db-417e-9c7e-3d0dab7b00a2">
 	<property name="ireport.scriptlethandling" value="0"/>
 	<property name="ireport.encoding" value="UTF-8"/>
 	<property name="ireport.zoom" value="1.0"/>
@@ -48,7 +48,6 @@
 	<variable name="GTotStock" class="java.lang.Double" calculation="Sum">
 		<variableExpression><![CDATA[$F{price}]]></variableExpression>
 	</variable>
-	<filterExpression><![CDATA[$F{price}!=0]]></filterExpression>
 	<group name="BrandCode">
 		<groupExpression><![CDATA[$F{brandcode}]]></groupExpression>
 		<groupHeader>
@@ -70,7 +69,7 @@
 	<columnHeader>
 		<band height="22" splitType="Stretch">
 			<staticText>
-				<reportElement key="staticText-6" x="0" y="7" width="30" height="15"/>
+				<reportElement uuid="73334566-967c-44df-8c11-cbc29af18fc6" key="staticText-6" x="0" y="7" width="30" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -81,7 +80,7 @@
 				<text><![CDATA[No.]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-7" x="120" y="7" width="93" height="15"/>
+				<reportElement uuid="f4d448fa-7c9f-4b23-978e-1dc10abf7942" key="staticText-7" x="120" y="7" width="93" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -92,7 +91,7 @@
 				<text><![CDATA[Kd. Barang]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-8" x="213" y="7" width="204" height="15"/>
+				<reportElement uuid="43c17080-865e-42ea-8c40-de6611cc0955" key="staticText-8" x="213" y="7" width="204" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -103,7 +102,7 @@
 				<text><![CDATA[Nama Barang]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-9" x="30" y="7" width="90" height="15"/>
+				<reportElement uuid="0992019a-4a42-45fc-89ee-32d1103e0047" key="staticText-9" x="30" y="7" width="90" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -114,7 +113,7 @@
 				<text><![CDATA[Brand]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-10" x="502" y="7" width="50" height="15"/>
+				<reportElement uuid="2f4d9ea8-fa31-4c9f-b5f3-61f07f7a87b9" key="staticText-10" x="502" y="7" width="50" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -125,7 +124,7 @@
 				<text><![CDATA[Stock]]></text>
 			</staticText>
 			<staticText>
-				<reportElement key="staticText-10" x="417" y="7" width="85" height="15"/>
+				<reportElement uuid="44b8a7aa-d650-4242-81b6-105963d93ff3" key="staticText-10" x="417" y="7" width="85" height="15"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -140,7 +139,7 @@
 	<detail>
 		<band height="18" splitType="Stretch">
 			<textField isBlankWhenNull="false">
-				<reportElement key="textField" x="213" y="0" width="204" height="18"/>
+				<reportElement uuid="89af48a4-ec8e-4e42-9b5f-69a4552049b0" key="textField" x="213" y="0" width="204" height="18"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -150,10 +149,10 @@
 				<textElement verticalAlignment="Middle">
 					<font size="8"/>
 				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{itemName}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{itemName}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="false">
-				<reportElement key="textField" x="120" y="0" width="93" height="18"/>
+				<reportElement uuid="9c70aaea-aa02-4159-9dbb-47cc6aec34da" key="textField" x="120" y="0" width="93" height="18"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -163,10 +162,10 @@
 				<textElement verticalAlignment="Middle">
 					<font size="8"/>
 				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA["P:"+$F{itemCode}]]></textFieldExpression>
+				<textFieldExpression><![CDATA["P:"+$F{itemCode}]]></textFieldExpression>
 			</textField>
 			<textField pattern="#,##0.0" isBlankWhenNull="false">
-				<reportElement key="textField" x="502" y="0" width="50" height="18"/>
+				<reportElement uuid="e67b6e9f-a5bd-428b-b6e2-8993561cc7b7" key="textField" x="502" y="0" width="50" height="18"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -176,10 +175,10 @@
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font size="8"/>
 				</textElement>
-				<textFieldExpression class="java.lang.Double"><![CDATA[$F{price}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{price}]]></textFieldExpression>
 			</textField>
 			<textField pattern="###0" isBlankWhenNull="true">
-				<reportElement key="textField" x="30" y="0" width="90" height="18"/>
+				<reportElement uuid="4763d72d-b729-4386-8172-b908f4a8b726" key="textField" x="30" y="0" width="90" height="18"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -189,10 +188,10 @@
 				<textElement verticalAlignment="Middle">
 					<font size="8"/>
 				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{branddesc}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{branddesc}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="false">
-				<reportElement key="textField" x="0" y="0" width="30" height="18"/>
+				<reportElement uuid="7cf50ace-00f5-4f5b-a3b1-527e5d5ac416" key="textField" x="0" y="0" width="30" height="18"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -202,10 +201,10 @@
 				<textElement verticalAlignment="Middle">
 					<font size="8"/>
 				</textElement>
-				<textFieldExpression class="java.lang.Integer"><![CDATA[$V{no}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$V{no}]]></textFieldExpression>
 			</textField>
 			<textField pattern="" isBlankWhenNull="false">
-				<reportElement key="textField" x="417" y="0" width="85" height="18"/>
+				<reportElement uuid="a9892304-cf27-4b9f-b6f0-2a0550aa804e" key="textField" x="417" y="0" width="85" height="18"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -215,7 +214,7 @@
 				<textElement textAlignment="Left" verticalAlignment="Middle">
 					<font size="8"/>
 				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$F{pricename}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{pricename}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
@@ -229,8 +228,6 @@
 		<band splitType="Stretch"/>
 	</lastPageFooter>
 	<summary>
-		<band splitType="Stretch">
-			<printWhenExpression><![CDATA[( $P{optDtlCode}.equals( "" ) ? true : false )]]></printWhenExpression>
-		</band>
+		<band splitType="Stretch"/>
 	</summary>
 </jasperReport>
